--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
             <address class="header-contact">
                 <ul class="header-contact-menu">
-                    <li header-contact-item><a class="header-contact-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-contact-item"><a class="header-contact-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li class="header-contact-item"><a class="header-contact-list" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
@@ -45,13 +45,13 @@
                 </button>
             
                 <ul class="mob-menu-list">
-                    <li h2 class="mob-menu-item">
+                    <li class="mob-menu-item">
                         <a class="mob-menu-link current" href="./index.html">Studio</a>
                     </li>
-                    <li h2 class="mob-menu-item">
+                    <li class="mob-menu-item">
                         <a class="mob-menu-link" href="">Portfolio</a>
                     </li>
-                    <li h2 class="mob-menu-item">
+                    <li class="mob-menu-item">
                         <a class="mob-menu-link" href="">Contacts</a>
                     </li>
                 </ul>
